# ODD-XML

./: .gitignore  README.md  xml-odd.cabal
src/Text/XML/: ODD.hs
src/Text/XML/ODD/: BootstrapTEI.hs  DTD.hs  Lenses.hs  RelaxNG.hs  Types.hs  XMLSchema.hs
